Fixing issue with title overflowing

--- a/ui/src/app/layout/app.component.scss
+++ b/ui/src/app/layout/app.component.scss
@@ -22,6 +22,7 @@
             display: flex;
             color: #fff;
             text-decoration: none;
+            white-space: pre;
             b {
                 color: var(--color-mondo);
             }
@@ -39,6 +40,9 @@
         .title {
             margin: auto 5px;
             font-size: 22px;
+            white-space: pre;
+            overflow-x: hidden;
+            text-overflow: ellipsis;
         }
     }
     main {
